# batter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: HANDOFF-2026-06-04-0.6.0-audit.md  design-0.9.0-contracts-and-fills.md  math-audit-0.4.md  py311-investigation-2026-05-27.md
examples/: _common.py
examples/btc_pred_hedge/: dataset.json  expected_result.json  regen.py  run.py  spec.json
examples/jakarta_temperature/: dataset.json  expected_result.json  regen.py  run.py  spec.json
examples/rapture_family/: dataset.json  expected_result.json  regen.py  run.py  spec.json
examples/toy/: dataset.json  expected_result.json  regen.py  run.py  spec.json
notebooks/: walkforward_tour.ipynb
pancake_engine/: __init__.py  __version__.py  canonical.py  cli.py  config.py  contracts.py  hash.py  pbo.py  portfolio.py  result.py  sensitivity.py  trials.py  types.py  warnings.py
pancake_engine/chain/: __init__.py  builder.py  errors.py  orders.py  records.py  verify.py
pancake_engine/compile/: __init__.py  condition.py  spec.py
pancake_engine/crypto_ohlcv/: __init__.py  compile.py  indicators.py  result.py  run.py  types.py
pancake_engine/fills/: __init__.py  registry.py
pancake_engine/io/: __init__.py  dump.py  load.py
pancake_engine/metrics/: __init__.py  bootstrap.py  cost_sensitivity.py  credibility.py  fdr.py  permutation.py  pm.py  psr.py  regime.py  series.py  standard.py
pancake_engine/runner/: __init__.py  batch.py  engine.py  events.py  fill.py  ledger.py  observation.py  position.py  sizing.py  tick.py  trade.py
pancake_engine/validate/: __init__.py  dataset.py  macro.py  spec.py  sports.py  verdict.py
pancake_engine/walkforward/: __init__.py  aggregate.py  result.py  runner.py  schedule.py  window.py
scripts/: check_math_acceptance.sh
tests/: _runner_helpers.py  _wf_helpers.py  conftest.py  test_agent_supplied_feature_warning.py  test_audit_2026_06_fixes.py  test_audit_2026_06_spec_rejection.py  test_baseline.py  test_book_replay.py  test_bootstrap_determinism.py  test_canonical.py  test_chain.py  test_cli_validate_run.py  test_cli_verify.py  test_compile.py  test_crypto_ohlcv_compile.py  test_crypto_ohlcv_indicators.py  test_crypto_ohlcv_run.py  test_crypto_ohlcv_types.py  test_crypto_wave3.py  test_daily_returns_same_day.py  test_dataset_contracts.py  test_examples_smoke.py  test_exit_condition.py  test_extreme_inputs.py  test_fill_registry.py  test_hash.py  test_idempotency.py  test_load.py  test_macro_signal_contract.py  test_math_acceptance.py  test_math_brutal_verification.py  test_metrics_block_bootstrap.py  test_metrics_bootstrap.py  test_metrics_cost_sensitivity.py  test_metrics_credibility.py  test_metrics_fdr.py  test_metrics_permutation.py  test_metrics_pm.py  test_metrics_psr.py  test_metrics_standard.py  (+32 more)
tests/fixtures/canonical/: cases.json  expected_bytes.json  ts_hash_oracle.mjs  ts_hashes.json  v8_oracle.js
tests/fixtures/runner/: ts_runner_expected.json  ts_runner_oracle.mjs  ts_walkforward_expected.json  ts_walkforward_oracle.mjs
