[build-system]
requires = ["hatchling >= 1.18"]
build-backend = "hatchling.build"

[project]
name = "pancake-math"
version = "0.4.0"
description = "Deterministic Python research engine for prediction-market evidence-backed backtests"
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Mustopo", email = "michael.mustopo@gmail.com" }]
keywords = ["pancake", "backtest", "evidence", "deterministic", "prediction-market"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "pydantic >= 2.5, < 3",
  "numpy >= 1.26",
  "scipy>=1.17.1",
]

[project.urls]
Repository = "https://github.com/michaelmustopo/pancake-engine-py"
Homepage = "https://usepancake.com"

[project.optional-dependencies]
dev = [
  "pytest >= 8",
  "pytest-cov",
  "ruff",
  "mypy",
  # Notebook execution (PR-2). nbclient runs notebooks without a Jupyter UI.
  "nbclient >= 0.10",
  "nbformat >= 5.10",
  "ipykernel >= 6.29",
]

[project.scripts]
pancake-engine = "pancake_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pancake_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["pancake_engine"]
