[build-system]
requires = ["hatchling >= 1.18"]
build-backend = "hatchling.build"

[project]
name = "batter"
version = "0.10.4"
description = "Deterministic Python research engine for prediction-market evidence-backed backtests"
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Mustopo", email = "michael.mustopo@gmail.com" }]
keywords = [
  "batter",
  "pancake",
  "backtest",
  "backtesting",
  "evidence",
  "deterministic",
  "reproducible",
  "verifiable-backtest",
  "prediction-market",
  "polymarket",
  "kalshi",
  "trading",
  "quant",
  "mcp",
  "model-context-protocol",
  "ai-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pydantic >= 2.5, < 3",
  "numpy >= 1.26",
  "scipy>=1.17.1",
]

[project.urls]
Repository = "https://github.com/usepancake/batter"
Homepage = "https://usepancake.com"
Documentation = "https://www.usepancake.com/engine"
Changelog = "https://www.usepancake.com/changelog"
Methodology = "https://www.usepancake.com/methodology"

[project.optional-dependencies]
dev = [
  "pytest >= 8",
  "pytest-cov",
  "ruff",
  "mypy",
  # Notebook execution (PR-2). nbclient runs notebooks without a Jupyter UI.
  "nbclient >= 0.10",
  "nbformat >= 5.10",
  "ipykernel >= 6.29",
]

[project.scripts]
batter = "pancake_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pancake_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test files often have long fixture-data lines that read better unwrapped
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["pancake_engine"]
